<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" android:background="@drawable/rfid_c_bg"
    android:id="@+id/Rlto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm_type"
        android:id="@+id/Tvn1"
        android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
        android:layout_marginTop="22dp" android:textColor="@color/my_black"
        android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/Tvv1"
              android:textColor="@color/my_black"
        android:layout_alignTop="@+id/Tvn1"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alarm_jb"
        android:id="@+id/textView6" android:layout_below="@+id/Tvn1"
        android:layout_alignLeft="@+id/Tvn1" android:layout_alignStart="@+id/Tvn1"
        android:layout_marginTop="14dp" android:textColor="@color/my_black1"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/alarm_msg"
              android:id="@+id/Tvn3"
        android:textColor="@color/my_black1"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Tvv2"
              android:textColor="@color/my_black1" android:layout_above="@+id/Tvn3"
              android:layout_alignLeft="@+id/Tvv1" android:layout_alignStart="@+id/Tvv1"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Tvv3"
              android:textColor="@color/my_black1"
        android:layout_alignTop="@+id/Tvn3"
        android:layout_alignLeft="@+id/Tvv2"
        android:layout_alignStart="@+id/Tvv2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tv_no"
        android:background="@drawable/rfid_c_xh_bg"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentTop="true" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" android:gravity="center|top"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView28"
        android:src="@drawable/rfid_c_zt_bg"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/Tvv42"
        android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
        android:textColor="@color/jg_red_1"
        android:layout_marginTop="5dp"
        android:layout_alignTop="@+id/imageView28" android:layout_toRightOf="@+id/imageView28"
        android:layout_toEndOf="@+id/imageView28"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView30"
        android:src="@drawable/rfid_c_sj_bg"
        android:layout_alignTop="@+id/imageView28" android:layout_toLeftOf="@+id/Tvv5"
        android:layout_toStartOf="@+id/Tvv5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/Tvv5" android:layout_alignTop="@+id/Tvv42"
        android:layout_alignRight="@+id/tv_no" android:layout_alignEnd="@+id/tv_no"
        android:textColor="@color/my_black1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alarm_name"
        android:id="@+id/textView8"
        android:textColor="@color/my_black1"
        android:layout_below="@+id/Tvn3"
        android:layout_alignLeft="@+id/Tvn3"
        android:layout_alignStart="@+id/Tvn3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Tvv4"
        android:textColor="@color/my_black1"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/Tvv3"
        android:layout_alignStart="@+id/Tvv3" />
</RelativeLayout>